src/test/testFiles/valid/example.val
let x = 1;
let y: Stack<number> = Stack<number>();
y.push(x);
let z = y.pop();