src/test/testFiles/invalid/syntaxErrors/invalidTypeParameter.val
let a: Stack = Stack<asd>();
